--- a/src/main/resources/com/projects/taxicorporation/AddCar.fxml
+++ b/src/main/resources/com/projects/taxicorporation/AddCar.fxml
@@ -15,38 +15,38 @@
                         <Font name="Arial Bold" size="19.0" />
                      </font>
                   </Label>
-                  <Button layoutX="14.0" layoutY="244.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Zarządzaj oddziałami" textFill="WHITE">
+                  <Button layoutX="12.0" layoutY="119.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Usuń menadżera" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
-                  <Button layoutX="14.0" layoutY="201.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Dodaj oddział" textFill="WHITE">
+                  <Button layoutX="13.0" layoutY="74.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Dodaj menadżera" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="14.0" layoutY="205.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Dodaj oddział" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="14.0" layoutY="162.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Zarzadzaj menadżerami" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="14.0" layoutY="340.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Usuń samochód" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font></Button>
-                  <Button layoutX="14.0" layoutY="157.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Zarządzaj menadżerami" textFill="WHITE">
+                  <Button layoutX="14.0" layoutY="296.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Dodaj samochód" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font></Button>
-                  <Button layoutX="14.0" layoutY="112.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Usuń menadżera" textFill="WHITE">
+                  <Button layoutX="14.0" layoutY="250.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Zarządzaj oddziałami" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font></Button>
-                  <Button layoutX="14.0" layoutY="67.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Dodaj menadżera" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="16.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="13.0" layoutY="336.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Usuń samochód" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="16.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="14.0" layoutY="290.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Dodaj samochód" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="16.0" />
-                     </font>
-                  </Button>
                   <Button layoutX="12.0" layoutY="419.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(134,134,134);" text="Wyloguj" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
@@ -55,35 +55,30 @@
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="468.0" prefWidth="542.0">
                <children>
-                  <Label layoutX="166.0" layoutY="28.0" text="Uzupełnij dane">
+                  <Label layoutX="166.0" layoutY="28.0" text="Dodaj samochód">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="64.0" layoutY="143.0" text="Nazwa oddziału">
+                  <Label layoutX="64.0" layoutY="143.0" text="Model pojazdu">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
                   <TextField layoutX="64.0" layoutY="171.0" prefHeight="25.0" prefWidth="390.0" />
-                  <Label layoutX="64.0" layoutY="214.0" text="Miejscowość oddziału">
+                  <Label layoutX="64.0" layoutY="214.0" text="Rok produkcji">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
                   <TextField layoutX="64.0" layoutY="234.0" prefHeight="25.0" prefWidth="390.0" />
-                  <Label layoutX="64.0" layoutY="273.0" text="Ulica Oddziału">
+                  <Label layoutX="64.0" layoutY="273.0" text="Oddział">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="64.0" layoutY="293.0" prefHeight="25.0" prefWidth="390.0" />
-                  <Button layoutX="118.0" layoutY="341.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="266.0" style="-fx-background-color: rgb(211,20,20);" text="Dodaj " textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="120.0" layoutY="402.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="266.0" style="-fx-background-color: rgb(134,134,134);" text="Edytuj lub usuń oddział" textFill="WHITE">
+                  <ChoiceBox layoutX="64.0" layoutY="293.0" prefHeight="25.0" prefWidth="390.0" />
+                  <Button layoutX="118.0" layoutY="374.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="266.0" style="-fx-background-color: rgb(211,20,20);" text="Dodaj " textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
