--- a/src/main/resources/com/projects/taxicorporation/DriverPanelController.fxml
+++ b/src/main/resources/com/projects/taxicorporation/DriverPanelController.fxml
@@ -20,7 +20,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
-                  <Button layoutX="12.0" layoutY="189.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" style="-fx-background-color: rgb(211,20,20);" text="Wyszukaj trasę" textFill="WHITE">
+                  <Button layoutX="12.0" layoutY="189.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" style="-fx-background-color: rgb(211,20,20);" text="Moje zlecenia" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
